--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Model</title>
-    <link rel="shortcut icon" href="Florzin.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/eurafe/Box-Model/blob/main/Florzin.ico" type="image/x-icon">
     <style>
         Div{
             height: 400px;
@@ -15,7 +15,7 @@
             border-style:solid;
             border-color: blueviolet;
 
-            background-image: url(Flor.webp);
+            background-image: url(https://github.com/eurafe/Box-Model/blob/main/Flor.webp);
             text-align: center;
             box-shadow: inset 7px 7px 15px 5px red;
             background-size: cover;
