--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             border-style:solid;
             border-color: blueviolet;
 
-            background-image:url(Florpng.png);
+            background-image:url(Flor.webp);
             text-align: center;
             box-shadow: inset 7px 7px 15px 5px red;
             background-size: cover;
